
* ws-salink:2013-61[]
+
Something is up with a dissector.
// Fixed in trunk: r?????
// Fixed in trunk-1.10: r?????
// Fixed in trunk-1.8: r?????
(ws-buglink:????[])
+
Versions affected: 1.10.0 to 1.10.2, 1.8.0 to 1.8.10
//+
//cve-idlink:2013-????[]



The following bugs have been fixed:

//* Wireshark will practice the jazz flute for hours on end when you're trying to sleep. (ws-buglink:0000[])
 * Files with pcap-ng Simple Packet Blocks can't be read. (ws-buglink:9200[])

=== New and Updated Features

There are no new features in this release.

=== New Protocol Support

There are no new protocols in this release.

=== Updated Protocol Support

--sort-and-group--

.

--sort-and-group--

=== New and Updated Capture File Support

--sort-and-group--

.

--sort-and-group--

== Getting Wireshark

Wireshark source code and installation packages are available from
http://www.wireshark.org/download.html.

=== Vendor-supplied Packages

Most Linux and Unix vendors supply their own Wireshark packages. You can
usually install or upgrade Wireshark using the package management system
specific to that platform. A list of third-party packages can be found
on the http://www.wireshark.org/download.html#thirdparty[download page]
on the Wireshark web site.

== File Locations

Wireshark and TShark look in several different locations for preference
files, plugins, SNMP MIBS, and RADIUS dictionaries. These locations vary
from platform to platform. You can use About→Folders to find the default
locations on your system.

== Known Problems

Dumpcap might not quit if Wireshark or TShark crashes.
(ws-buglink:1419[])

The BER dissector might infinitely loop.
(ws-buglink:1516[])

Capture filters aren't applied when capturing from named pipes.
(ws-buglink:1814[])

Filtering tshark captures with read filters (-R) no longer works.
(ws-buglink:2234[])

The 64-bit Windows installer does not support Kerberos decryption.
(https://wiki.wireshark.org/Development/Win64[Win64 development page])
